--- a/android-viewradar/mobile/build.gradle
+++ b/android-viewradar/mobile/build.gradle
@@ -5,7 +5,7 @@ android {
         buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "net.dheera.wearcamera"
+        applicationId "nl.hva.viewradar"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 12
