--- a/android-viewradar/mobile/src/main/AndroidManifest.xml
+++ b/android-viewradar/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.dheera.wearcamera" >
+    package="net.dheera.viewradar" >
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -15,18 +15,18 @@
         android:theme="@style/AppTheme" >
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".MainActivity"
+            android:name="net.dheera.viewradar.nl.hva.viewradar.viewradar.MainActivity"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             android:launchMode="singleTask"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name=".DeviceListActivity">
+        <activity android:name="net.dheera.viewradar.nl.hva.viewradar.viewradar.DeviceListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".DataLayerListenerService">
+        <service android:name="net.dheera.viewradar.nl.hva.viewradar.viewradar.DataLayerListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
