--- a/android-viewradar/wear/src/main/AndroidManifest.xml
+++ b/android-viewradar/wear/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@android:style/Theme.DeviceDefault" >
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
-            android:name="nl.hva.viewradar.viewradar.MainActivity"
+            android:name="nl.hva.viewradar.MainActivity"
             android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="nl.hva.viewradar.viewradar.DataLayerListenerService">
+        <service android:name="nl.hva.viewradar.DataLayerListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
