--- a/android-viewradar/mobile/src/main/AndroidManifest.xml
+++ b/android-viewradar/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.dheera.viewradar" >
+    package="nl.hva.viewradar" >
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -9,24 +9,25 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <application
+        android:name="nl.hva.viewradar.application.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
-            android:name="nl.hva.viewradar.MainActivity"
+            android:name="nl.hva.viewradar.activities.MainActivity"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             android:launchMode="singleTask"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name="nl.hva.viewradar.DeviceListActivity">
+        <activity android:name="nl.hva.viewradar.activities.DeviceListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="nl.hva.viewradar.DataLayerListenerService">
+        <service android:name="nl.hva.viewradar.services.DataLayerListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
