--- a/android-viewradar/mobile/build.gradle
+++ b/android-viewradar/mobile/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-        compileSdkVersion 21
-        buildToolsVersion "25.0.2"
+    compileSdkVersion 21
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "nl.hva.viewradar"
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:10.2.0'
+    compile 'com.android.support:support-v4:21.0.3'
 }
