--- a/android-viewradar/mobile/build.gradle
+++ b/android-viewradar/mobile/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:10.2.0'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
